@@ -11,7 +11,6 @@ import com.example.demo.Mapper.StudentMapper;
 import com.example.demo.Repository.CourseRepository;
 import com.example.demo.Repository.StudentRepository;
 import com.example.demo.Service.StudentService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -19,15 +18,18 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class StudentServiceImpl implements StudentService {
 
-    @Autowired
-    private StudentRepository studentRepository;
-    @Autowired
-    private CourseRepository courseRepository;
+    private final StudentRepository studentRepository;
+    private final CourseRepository courseRepository;
+    public StudentServiceImpl(StudentRepository studentRepository,CourseRepository courseRepository)
+    {
+        this.studentRepository=studentRepository;
+        this.courseRepository=courseRepository;
+    }
+    private static final String STUDENT_NOT_FOUND_MESSAGE = "Student not found with ID: ";
 
     @Override
     public String createstudent(StudentDTO student) {
@@ -45,7 +47,7 @@ public class StudentServiceImpl implements StudentService {
         if (student.getCourseNames() != null && !student.getCourseNames().isEmpty()) {
             List<CourseDomain> courses = courseRepository.findAll().stream()
                     .filter(c -> student.getCourseNames().contains(c.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (courses.size() != student.getCourseNames().size()) {
                 throw new ResourceNotFoundException("One or more course names are invalid");
@@ -61,7 +63,7 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public StudentDTO getstudentbyid(Long id) {
         StudentDomain domain = studentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(STUDENT_NOT_FOUND_MESSAGE + id));
         return StudentMapper.toDTO(domain);
     }
 
@@ -77,7 +79,7 @@ public class StudentServiceImpl implements StudentService {
     private LocalDate parseDate(String input) {
         try {
             return LocalDate.parse(input, DateTimeFormatter.ISO_LOCAL_DATE);
-        } catch (Exception e) {
+        } catch (Exception _) {
             return null;
         }
     }
@@ -89,7 +91,7 @@ public class StudentServiceImpl implements StudentService {
         try {
             Long id = Long.parseLong(query);
             result = studentRepository.searchByIdOrNameOrDept(id, query, pageable);
-        } catch (NumberFormatException e) {
+        } catch (NumberFormatException _) {
             LocalDate dob = parseDate(query);
             if (dob != null) {
                 result = studentRepository.searchByDob(dob, pageable);
@@ -108,7 +110,7 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public String updatestudent(Long id, StudentDTO student) {
         StudentDomain existing = studentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(STUDENT_NOT_FOUND_MESSAGE + id));
 
         List<StudentDomain> duplicates = studentRepository.findByNameAndDobAndDept(
                 student.getName().trim(), student.getDob(), student.getDept().trim()
@@ -127,7 +129,7 @@ public class StudentServiceImpl implements StudentService {
         if (student.getCourseNames() != null && !student.getCourseNames().isEmpty()) {
             List<CourseDomain> matched = courseRepository.findAll().stream()
                     .filter(c -> student.getCourseNames().contains(c.getName()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (matched.size() != student.getCourseNames().size()) {
                 throw new ResourceNotFoundException("One or more course names are invalid");
@@ -145,7 +147,7 @@ public class StudentServiceImpl implements StudentService {
     @Override
     public String deletestudent(Long id) {
         StudentDomain existing = studentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Student not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(STUDENT_NOT_FOUND_MESSAGE + id));
 
         studentRepository.delete(existing);
         return "Student deleted: " + existing.getName();
@@ -156,44 +158,59 @@ public class StudentServiceImpl implements StudentService {
 
         for (int i = 0; i < bulkDto.getStudents().size(); i++) {
             StudentDTO dto = bulkDto.getStudents().get(i);
-            List<String> rowErrors = new ArrayList<>();
+            List<String> rowErrors = validateStudent(dto);
 
-            if (dto.getName() == null || dto.getName().isBlank()) rowErrors.add("Missing name");
-            if (dto.getDob() == null) rowErrors.add("Missing DOB");
-            if (dto.getDept() == null || dto.getDept().isBlank()) rowErrors.add("Missing department");
-            if (dto.getCourseNames() == null || dto.getCourseNames().isEmpty()) rowErrors.add("Missing course names");
-            if (dto.getEmail() == null || dto.getEmail().isBlank()) rowErrors.add("Missing email");
-            else if (!dto.getEmail().matches("^[A-Za-z0-9+_.-]+@(.+)$")) rowErrors.add("Invalid email format");
-
-            // ✅ Duplicate check (name+dob+dept)
-            boolean exists = studentRepository.findExistingStudent(dto.getName(), dto.getDob(), dto.getDept()).isPresent();
-            if (exists) rowErrors.add("Duplicate student");
-
-            // ✅ Duplicate email check
-            boolean emailExists = studentRepository.findByEmail(dto.getEmail()).isPresent();
-            if (emailExists) rowErrors.add("Duplicate email");
+            if (rowErrors.isEmpty()) {
+                rowErrors.addAll(validateCourses(dto));
+            }
 
             if (!rowErrors.isEmpty()) {
                 errors.add("Row " + (i + 1) + ": " + String.join(", ", rowErrors));
-                continue;
+            } else {
+                StudentDomain student = StudentMapper.toDomain(dto,
+                        courseRepository.findByNameInIgnoreCase(dto.getCourseNames()));
+                student.setEmail(dto.getEmail());
+                studentRepository.save(student);
             }
-
-            List<CourseDomain> courses = courseRepository.findByNameInIgnoreCase(dto.getCourseNames());
-            if (courses.size() != dto.getCourseNames().size()) {
-                List<String> missing = new ArrayList<>(dto.getCourseNames());
-                missing.removeAll(courses.stream().map(CourseDomain::getName).toList());
-                rowErrors.add("Invalid course names: " + String.join(", ", missing));
-                errors.add("Row " + (i + 1) + ": " + String.join(", ", rowErrors));
-                continue;
-            }
-
-            StudentDomain student = StudentMapper.toDomain(dto, courses);
-            student.setEmail(dto.getEmail()); // ✅ Persist email
-            studentRepository.save(student);
         }
 
-        if (!errors.isEmpty()) throw new BulkValidationException(errors);
+        if (!errors.isEmpty()) {
+            throw new BulkValidationException(errors);
+        }
         return errors;
+    }
+
+    private List<String> validateStudent(StudentDTO dto) {
+        List<String> rowErrors = new ArrayList<>();
+
+        if (dto.getName() == null || dto.getName().isBlank()) rowErrors.add("Missing name");
+        if (dto.getDob() == null) rowErrors.add("Missing DOB");
+        if (dto.getDept() == null || dto.getDept().isBlank()) rowErrors.add("Missing department");
+        if (dto.getCourseNames() == null || dto.getCourseNames().isEmpty()) rowErrors.add("Missing course names");
+        if (dto.getEmail() == null || dto.getEmail().isBlank()) {
+            rowErrors.add("Missing email");
+        } else if (!dto.getEmail().matches("^[A-Za-z0-9+_.-]+@(.+)$")) {
+            rowErrors.add("Invalid email format");
+        }
+
+        if (studentRepository.findExistingStudent(dto.getName(), dto.getDob(), dto.getDept()).isPresent()) {
+            rowErrors.add("Duplicate student");
+        }
+        if (dto.getEmail() != null && studentRepository.findByEmail(dto.getEmail()).isPresent()) {
+            rowErrors.add("Duplicate email");
+        }
+
+        return rowErrors;
+    }
+
+    private List<String> validateCourses(StudentDTO dto) {
+        List<CourseDomain> courses = courseRepository.findByNameInIgnoreCase(dto.getCourseNames());
+        if (courses.size() != dto.getCourseNames().size()) {
+            List<String> missing = new ArrayList<>(dto.getCourseNames());
+            missing.removeAll(courses.stream().map(CourseDomain::getName).toList());
+            return List.of("Invalid course names: " + String.join(", ", missing));
+        }
+        return List.of();
     }
 
 
